src/Styles/app.css
* {
  font-family: -apple-system, 
               BlinkMacSystemFont, 
               "Segoe UI", 
               Roboto, 
               Oxygen,
               Ubuntu,
               Cantarell,
               "Open Sans",
               "Helvetica Neue", 
               sans-serif;
}

html {
  height: 100%;

  font-size: 24px;
}

body{
  background: linear-gradient(#a1c4fd, #c2e9fb);
}

#root {
  display: flex;
  justify-content: center;
  align-items: center;
}

.calc-card {
  background-color: #f9f9f9;
  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
  padding: 1rem;
  border-radius: 4px;
  margin-top: 30px;

  width: 250px;
}

.calc-form {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: center;
}

.input-form {
  height: 2rem;
  width: 100px;

  border: 1px solid rgba(0, 0, 0, 0.2);
  padding: 0 1rem ;

  text-align: center;
}

.header {
  flex: 1 0 100%;
}

.input-form {
  flex: 1 0 60%;
  max-width: 100px;
  border-radius: 5px 0 0 5px;
}

.input-button {
  color: white;
  border: none;
  width: 50px;
  border-radius: 0 5px 5px 0;
}

.input-button:hover {
  opacity: 0.75;
  cursor: pointer;
}

.input-button--dis {
  background: linear-gradient(to left, #6a3093 , #a044ff);
}

.input-button--go{
  background: linear-gradient(to left, #76b852 , #8DC26F);
}

.result{
  text-align: center;
}

input[type=number]::-webkit-inner-spin-button, 
input[type=number]::-webkit-outer-spin-button { 
  -webkit-appearance: none; 
  margin: 0; 
}

@media (min-width: 600px) {
  #root {
    height: 100vh;
  }

  html{
    font-size: 16px;
  }

  .calc-card {
    margin-top: 0;
  }
}

